--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "gsap": "^3.14.2",
     "lenis": "^1.3.16",
+    "locomotive-scroll": "^4.1.4",
     "rxjs": "~7.8.0",
     "split-type": "^0.3.4",
     "three": "^0.182.0",
@@ -40,6 +41,7 @@
     "@types/dat.gui": "^0.7.13",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/locomotive-scroll": "^4.1.4",
     "@types/node": "^18.18.0",
     "@types/three": "^0.182.0",
     "jasmine-core": "~5.4.0",
