--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
+    "@studio-freight/lenis": "^1.0.42",
     "@types/gsap": "^1.20.2",
     "dat.gui": "^0.7.9",
     "express": "^4.18.2",
